Fixing remaining layout issues

--- a/app/assets/stylesheets/courses.scss
+++ b/app/assets/stylesheets/courses.scss
@@ -13,11 +13,6 @@
 .course-credits{
 	text-align:right;
 }
-body {
-  background: #ddd;
-  display: flex;
-  height: 100% !important;
-}
 
 // * {
 //   box-sizing: border-box;
